--- a/index.html
+++ b/index.html
@@ -16,42 +16,42 @@
         <div class="slide">
 
             
-            <div class="item" style="background-image: url(https://w.forfun.com/fetch/3b/3be8b10dcad76675cf634d675cd223eb.jpeg);">
+            <div class="item" style="background-image: url(./img/3be8b10dcad76675cf634d675cd223eb.jpeg);">
                 <div class="content">
                     <div class="name">Switzerland</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(http://s1.1zoom.ru/big3/406/Finland_Winter_Houses_Isokyla_Ostrobothnia_Snow_543895_3900x2000.jpg);">
+            <div class="item" style="background-image: url(./img/img2.jpeg);">
                 <div class="content">
                     <div class="name">Finland</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(https://w.forfun.com/fetch/dc/dcdcde5b4adc8023a99744813aaedff6.jpeg);">
+            <div class="item" style="background-image: url(./img/img-3.jpeg);">
                 <div class="content">
                     <div class="name">Iceland</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(https://sneg.top/uploads/posts/2023-03/1678388145_sneg-top-p-avstraliiskie-oboi-krasivo-1.jpg);">
+            <div class="item" style="background-image: url(./img/img-4.jpeg);">
                 <div class="content">
                     <div class="name">Australia</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(https://w.forfun.com/fetch/ca/ca36999676fe637a6a50df64098e1fde.jpeg);">
+            <div class="item" style="background-image: url(./img/img-5.jpeg);">
                 <div class="content">
                     <div class="name">Netherland</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(https://oboi-download.ru/files/wallpapers/464/14625.jpg);">
+            <div class="item" style="background-image: url(./img/img-6.jpeg);">
                 <div class="content">
                     <div class="name">Ireland</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
