--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-   
-     
     <div class="container">
-
         <div class="slide">
-
-            
-            <div class="item" style="background-image: url(./img/3be8b10dcad76675cf634d675cd223eb.jpeg);">
+            <div class="item" style="background-image: url(./img/img-1.jpeg);">
                 <div class="content">
                     <div class="name">Switzerland</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
